<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="2dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winner_is"
            android:background="@color/colorPrimary"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white"
            android:padding="5dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/winnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:background="@android:color/white"
            tools:text="player"
            android:textColor="@android:color/holo_green_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
        <Button
            android:id="@+id/close_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"/>
        <Button
            android:id="@+id/play_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_again"/>
    </LinearLayout>

</LinearLayout>